# winnie

./: README.md  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: publish.yml  quicktests.yml  tests.yml
src/winnie/: byteops.py  connection.py  constants.py  formatting.py  listops.py  resourceMask.py  sessionStatus.py  verification.py
tests/: test_byteops.py  test_resourceMask.py  test_sessionStatus.py
