[metadata]
name = pytemplate
version = v0.0.1
author = HWRacing
author_email = fs60@hw.ac.uk
description = Python template package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/HWRacing/pytemplate
project_urls =
    Bug Tracker = https://github.com/HWRacing/pytemplate/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    # License :: OSI Approved :: MIT License
    # Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
zip_safe = no

[options.packages.find]
where = src

[options.extras_require]
testing = 
    pytest>=7.0
    tox>=4.4.0
    mypy>=1.0.0
